fix: wrong font-size

--- a/src/css/installation-final.css
+++ b/src/css/installation-final.css
@@ -21,7 +21,7 @@ header p.strong {
 
 .bloc div {
   padding: 5px;
-  font-size: 1.2em;
+  font-size: 18px;
   text-transform: uppercase;
 }
 
@@ -33,7 +33,7 @@ header p.strong {
 }
 
 .ads h2 {
-  font-size: 1.1em;
+  font-size: 18px;
 }
 
 .accepted {
